# wolfram-alpha-mcp

./: .gitignore  API_Documentation_original  LICENSE  README.md  pyproject.toml
prompts/: claude_desktop_test.md  wolfram_alpha_test.md
src/wolfram_alpha/: __init__.py  server.py
tests/: test_server.py
