[project]
name = "wolfram-alpha-mcp"
version = "0.1.0"
description = "MCP Server for Wolfram Alpha integration"
authors = [
    {name = "Juliane Hüttl", email = "mail@juliane-huettl.de"}
]
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wolfram_alpha"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 